--- a/00_test_FastApi/00_emotion.ipynb
+++ b/00_test_FastApi/00_emotion.ipynb
@@ -70,21 +70,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\80412\\AppData\\Local\\Temp\\ipykernel_18216\\298469755.py:20: MovedIn20Warning: The ``declarative_base()`` function is now available as sqlalchemy.orm.declarative_base(). (deprecated since: 2.0) (Background on SQLAlchemy 2.0 at: https://sqlalche.me/e/b8d9)\n",
+      "C:\\Users\\80412\\AppData\\Local\\Temp\\ipykernel_20948\\298469755.py:20: MovedIn20Warning: The ``declarative_base()`` function is now available as sqlalchemy.orm.declarative_base(). (deprecated since: 2.0) (Background on SQLAlchemy 2.0 at: https://sqlalche.me/e/b8d9)\n",
       "  Base = declarative_base()\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7046741b00ea421f9588ad0d260cf6b7",
+       "model_id": "d00564aff8db4868a2ebee79b16e623c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -101,7 +101,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -109,24 +109,138 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:     Started server process [18216]\n",
+      "INFO:     Started server process [20948]\n",
       "INFO:     Waiting for application startup.\n",
-      "INFO:     Application startup complete.\n"
+      "INFO:     Application startup complete.\n",
+      "INFO:     Uvicorn running on http://0.0.0.0:8000 (Press CTRL+C to quit)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:     127.0.0.1:58464 - \"GET / HTTP/1.1\" 200 OK\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f79bdd29a5da4bab98af3ee4f31d1dd7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/50 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:     127.0.0.1:58465 - \"POST /predict/ HTTP/1.1\" 500 Internal Server Error\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "ERROR:    [Errno 10048] error while attempting to bind on address ('0.0.0.0', 8000): [winerror 10048] 각 소켓 주소(프로토콜/네트워크 주소/포트)는 하나만 사용할 수 있습니다\n",
-      "INFO:     Waiting for application shutdown.\n",
-      "INFO:     Application shutdown complete.\n"
+      "ERROR:    Exception in ASGI application\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\80412\\miniforge3\\envs\\lecture_env\\Lib\\site-packages\\uvicorn\\protocols\\http\\httptools_impl.py\", line 401, in run_asgi\n",
+      "    result = await app(  # type: ignore[func-returns-value]\n",
+      "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\80412\\miniforge3\\envs\\lecture_env\\Lib\\site-packages\\uvicorn\\middleware\\proxy_headers.py\", line 60, in __call__\n",
+      "    return await self.app(scope, receive, send)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\80412\\miniforge3\\envs\\lecture_env\\Lib\\site-packages\\fastapi\\applications.py\", line 1054, in __call__\n",
+      "    await super().__call__(scope, receive, send)\n",
+      "  File \"c:\\Users\\80412\\miniforge3\\envs\\lecture_env\\Lib\\site-packages\\starlette\\applications.py\", line 113, in __call__\n",
+      "    await self.middleware_stack(scope, receive, send)\n",
+      "  File \"c:\\Users\\80412\\miniforge3\\envs\\lecture_env\\Lib\\site-packages\\starlette\\middleware\\errors.py\", line 187, in __call__\n",
+      "    raise exc\n",
+      "  File \"c:\\Users\\80412\\miniforge3\\envs\\lecture_env\\Lib\\site-packages\\starlette\\middleware\\errors.py\", line 165, in __call__\n",
+      "    await self.app(scope, receive, _send)\n",
+      "  File \"c:\\Users\\80412\\miniforge3\\envs\\lecture_env\\Lib\\site-packages\\starlette\\middleware\\exceptions.py\", line 62, in __call__\n",
+      "    await wrap_app_handling_exceptions(self.app, conn)(scope, receive, send)\n",
+      "  File \"c:\\Users\\80412\\miniforge3\\envs\\lecture_env\\Lib\\site-packages\\starlette\\_exception_handler.py\", line 53, in wrapped_app\n",
+      "    raise exc\n",
+      "  File \"c:\\Users\\80412\\miniforge3\\envs\\lecture_env\\Lib\\site-packages\\starlette\\_exception_handler.py\", line 42, in wrapped_app\n",
+      "    await app(scope, receive, sender)\n",
+      "  File \"c:\\Users\\80412\\miniforge3\\envs\\lecture_env\\Lib\\site-packages\\starlette\\routing.py\", line 715, in __call__\n",
+      "    await self.middleware_stack(scope, receive, send)\n",
+      "  File \"c:\\Users\\80412\\miniforge3\\envs\\lecture_env\\Lib\\site-packages\\starlette\\routing.py\", line 735, in app\n",
+      "    await route.handle(scope, receive, send)\n",
+      "  File \"c:\\Users\\80412\\miniforge3\\envs\\lecture_env\\Lib\\site-packages\\starlette\\routing.py\", line 288, in handle\n",
+      "    await self.app(scope, receive, send)\n",
+      "  File \"c:\\Users\\80412\\miniforge3\\envs\\lecture_env\\Lib\\site-packages\\starlette\\routing.py\", line 76, in app\n",
+      "    await wrap_app_handling_exceptions(app, request)(scope, receive, send)\n",
+      "  File \"c:\\Users\\80412\\miniforge3\\envs\\lecture_env\\Lib\\site-packages\\starlette\\_exception_handler.py\", line 53, in wrapped_app\n",
+      "    raise exc\n",
+      "  File \"c:\\Users\\80412\\miniforge3\\envs\\lecture_env\\Lib\\site-packages\\starlette\\_exception_handler.py\", line 42, in wrapped_app\n",
+      "    await app(scope, receive, sender)\n",
+      "  File \"c:\\Users\\80412\\miniforge3\\envs\\lecture_env\\Lib\\site-packages\\starlette\\routing.py\", line 73, in app\n",
+      "    response = await f(request)\n",
+      "               ^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\80412\\miniforge3\\envs\\lecture_env\\Lib\\site-packages\\fastapi\\routing.py\", line 301, in app\n",
+      "    raw_response = await run_endpoint_function(\n",
+      "                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\80412\\miniforge3\\envs\\lecture_env\\Lib\\site-packages\\fastapi\\routing.py\", line 214, in run_endpoint_function\n",
+      "    return await run_in_threadpool(dependant.call, **values)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\80412\\miniforge3\\envs\\lecture_env\\Lib\\site-packages\\starlette\\concurrency.py\", line 39, in run_in_threadpool\n",
+      "    return await anyio.to_thread.run_sync(func, *args)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\80412\\miniforge3\\envs\\lecture_env\\Lib\\site-packages\\anyio\\to_thread.py\", line 56, in run_sync\n",
+      "    return await get_async_backend().run_sync_in_worker_thread(\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\80412\\miniforge3\\envs\\lecture_env\\Lib\\site-packages\\anyio\\_backends\\_asyncio.py\", line 2441, in run_sync_in_worker_thread\n",
+      "    return await future\n",
+      "           ^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\80412\\miniforge3\\envs\\lecture_env\\Lib\\site-packages\\anyio\\_backends\\_asyncio.py\", line 943, in run\n",
+      "    result = context.run(func, *args)\n",
+      "             ^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\80412\\AppData\\Local\\Temp\\ipykernel_20948\\298469755.py\", line 79, in predict\n",
+      "    return templates.TemplateResponse(\"result.html\", {\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\80412\\miniforge3\\envs\\lecture_env\\Lib\\site-packages\\starlette\\templating.py\", line 208, in TemplateResponse\n",
+      "    template = self.get_template(name)\n",
+      "               ^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\80412\\miniforge3\\envs\\lecture_env\\Lib\\site-packages\\starlette\\templating.py\", line 131, in get_template\n",
+      "    return self.env.get_template(name)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\80412\\miniforge3\\envs\\lecture_env\\Lib\\site-packages\\jinja2\\environment.py\", line 1013, in get_template\n",
+      "    return self._load_template(name, globals)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\80412\\miniforge3\\envs\\lecture_env\\Lib\\site-packages\\jinja2\\environment.py\", line 972, in _load_template\n",
+      "    template = self.loader.load(self, name, self.make_globals(globals))\n",
+      "               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\80412\\miniforge3\\envs\\lecture_env\\Lib\\site-packages\\jinja2\\loaders.py\", line 138, in load\n",
+      "    code = environment.compile(source, name, filename)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\80412\\miniforge3\\envs\\lecture_env\\Lib\\site-packages\\jinja2\\environment.py\", line 768, in compile\n",
+      "    self.handle_exception(source=source_hint)\n",
+      "  File \"c:\\Users\\80412\\miniforge3\\envs\\lecture_env\\Lib\\site-packages\\jinja2\\environment.py\", line 939, in handle_exception\n",
+      "    raise rewrite_traceback_stack(source=source)\n",
+      "  File \"templates\\result.html\", line 14, in template\n",
+      "    {% comment %} <img src=\"data:image/png;base64,{{ image_data | b64encode }}\" alt=\"Generated Image\"/> {% endcomment %}\n",
+      "    ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "jinja2.exceptions.TemplateSyntaxError: Encountered unknown tag 'comment'.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:     127.0.0.1:58648 - \"GET / HTTP/1.1\" 200 OK\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "13762d34901d474b9aee4890b699bd77",
+       "model_id": "e3111f9f6e2748e2a4b845c074790416",
        "version_major": 2,
        "version_minor": 0
       },
@@ -138,9 +252,16 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:     127.0.0.1:58649 - \"POST /predict/ HTTP/1.1\" 200 OK\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b3b33a6655d549f091be926fab2449e7",
+       "model_id": "228ea8ff247b4f00ab1860e77dd13603",
        "version_major": 2,
        "version_minor": 0
       },
@@ -150,6 +271,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:     127.0.0.1:58728 - \"POST /predict/ HTTP/1.1\" 200 OK\n"
+     ]
     }
    ],
    "source": [
